<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:text="@string/you_have_to_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cardElevation="0dp">

        <EditText
            android:id="@+id/edit_nama"
            android:inputType="text"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/what_are_you_buying"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/green_text"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:cardElevation="0dp">

        <EditText
            android:maxLength="14"
            android:id="@+id/edit_jumlah"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/how_much"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/green_text"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textColor="@color/green_text"
        android:text="Add"/>

</LinearLayout>
</layout>